feat: Updated implementation of ServerLauncher by moving the implementation to new getHRMServer() method; and replaced new Locale to Locale.of() due to deprecation.